# minutes

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
minutes/: __init__.py  aggregation.py  audio.py  cli.py  pipeline.py  summarization.py  transcription.py  utils.py  writer.py
tests/: __init__.py  test_aggregation.py  test_audio.py  test_summarization.py  test_transcription.py  test_utils.py  test_writer.py
